syntax = "proto3";
package sudhakarmamillapalli.tictactoe.tictactoe;

option go_package = "github.com/sudhakar-mamillapalli/tictactoe/x/tictactoe/types";

message StoredGame {
  string index = 1; 
  string board = 2; 
  string playerX = 3; 
  string playerO = 4; 
  
}

